--- a/front/package.json
+++ b/front/package.json
@@ -31,6 +31,7 @@
     "i18next": "^22.0.6",
     "install": "^0.13.0",
     "lodash": "4.17.21",
+    "moment": "^2.30.1",
     "prop-types": "15.7.2",
     "react": "18.2.0",
     "react-apexcharts": "1.4.0",
