--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -21,6 +21,9 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
+  "paths": {
+    "*": ["node_modules/*", "src/types/*"]
+  },
   "include": [
     "src"
   ]
